--- a/pagina/css/menu.css
+++ b/pagina/css/menu.css
@@ -5,7 +5,6 @@
 
 #check-menu{
     position: absolute;
-    background-color: blue;
 }
 
 #checkbox-menu{
@@ -61,10 +60,15 @@ label span:nth-child(3){
 nav{
     position: relative;
     width: 220px;
-    height: 100vh;
+    height: 115vh;
     z-index: 1;
     background-color: var(--marrom);
-    display: none;
+    left: -350px;
+    transition: 0.5s;
+}
+
+#checkbox-menu:checked ~ nav{
+    transform: translateX(350px);
 }
 
 .menu{
