--- a/pagina/css/page.css
+++ b/pagina/css/page.css
@@ -193,3 +193,112 @@ footer a{
     left: 1315px;
 }
 
+/* ------------- HOVER ---------------- */
+
+.menu li:hover{
+    background-color: #3f3032;
+    cursor: pointer;
+}
+
+footer a:hover{
+    color: #fa5d6a;
+}
+
+/* ------------- RESPONSIVIDADE ---------------- */
+
+@media only screen and (max-width: 412px){
+
+.agent-name{
+    line-height: 65px;
+    top: 60px;
+    left: 30px;
+    font-size: 5em;  
+}
+
+.img-agent{
+    top: 60px;
+    left: 140px;
+    width: 200px;
+    height: 388.797px;
+}
+
+.ul-info{
+    position: static;
+    margin: auto;
+}
+
+.info{
+    width: 87vw;
+    height: 150px;
+    font-size: 1em;
+}
+
+.funcao{
+    top: 530px;
+    left: 140px;
+    font-size: 4em;
+    color:  white;
+    position: static;
+    width: 100%;
+    text-align: center;
+}
+
+.img-funcao{
+    width: 50px;
+    height: 50px;
+    top: 450px;
+    left: 150px;
+}
+
+#span1{
+    display: inline-block;
+    list-style: none;
+    text-align: center;
+    top: 420px;
+}
+#span2{
+    top: 200px;
+}
+#span3{
+    top: 400px;
+    left: 345px;
+}
+#span4{
+    left: 180px;
+    list-style: none;
+}
+
+#span5{
+    left: 345px;
+}
+#span6{
+    left: 335px;
+}
+
+#obs1{
+    display: inline;
+    width: 280px;
+    transform: translate(-140px, -20px);
+}
+
+#obs2{
+    display: inline;
+    width: 280px;
+    transform: translate(-140px, 50px);
+}
+
+.img-info{
+    position: absolute;
+    width: 96px;
+    height: 96px;
+    background-color: var(--marrom);
+    top: 12px;
+}
+
+.agent{
+    /*background-color: grey;*/
+    position: relative;
+    width: 100%;
+    height: 70vh;
+}
+}
