--- a/pagina/css/page.css
+++ b/pagina/css/page.css
@@ -247,7 +247,8 @@ footer a:hover{
     width: 50px;
     height: 50px;
     top: 450px;
-    left: 150px;
+    left: 50vw;
+    transform: translateX(-50%);
 }
 
 #span1{
@@ -299,6 +300,6 @@ footer a:hover{
     /*background-color: grey;*/
     position: relative;
     width: 100%;
-    height: 70vh;
+    height: 500px;
 }
 }
